fix grid and modal z-indexing

--- a/src/components/InfiniteScrollGrid/Tile/Tile.module.scss
+++ b/src/components/InfiniteScrollGrid/Tile/Tile.module.scss
@@ -24,6 +24,7 @@
   .topBanner {
     top: 0;
     background-color: rgba(44, 44, 44, 0.7);
+    z-index: 1;
   }
 
   .bottomBanner {
